src/index.css
body {
  background: var(--room-form);
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#root {
  height: 100vh;
}

:root {
    --main-color: #cfd8dc;
    --secondary-color: #1565c0;
    --main-text-color: #3e5869;
    --secondary-text-color: white;
    --send-message-form: #b0bec5;
    --room-form: whitesmoke;
    --message-list: whitesmoke;
    --my-message: #546e7a;
}

#appbar {
  height: 7.5%;
}

#restofapp {
  height: 92.5%;
}

.auth {
  box-sizing: border-box;
  margin: 30px 50px;
  padding: 10px;
  background: var(--main-color);
  text-align: center;
}

.User-Page {
  display: grid;
  height: 100%;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 50px;
  grid-template-areas: 
    'r m m m m m'
    'r m m m m m'
    'r m m m m m'
    'r m m m m m'
    'r m m m m m'
    'n f f f f f';
}

.Room-List {
  grid-area: r;
  box-sizing: border-box;
  padding: 10px;
  background-color: var(--main-color);
  overflow: scroll;
  height: 100%;
}

.Room-List ul {
    list-style-type: none;    
    padding: 0;
    overflow: scroll;
}

.Room-List li {
    margin: 10px 0;
}

.Room-List h3 {
    margin: 5px 0;
    color: var(--secondary-color);
}

.Room-List .room {
    color: var(--secondary-text-color);
    font-weight: 600;
    text-decoration: none;
 }

 .Room-List .room.active {
    color: var(--secondary-color);
}

.Message-List {
  grid-area: m;
  box-sizing: border-box;
  padding-left: 6px;
  width: 100%;
  height: 100%;
  overflow: scroll;
  background: var(--message-list);
}

.Message-List .join-room {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    font-size: 34px;
    font-weight: 300;
}

.message {
    margin: 10px 0;
}

.myMessage {
    text-align: right;
    margin: 10px 30px 0 0;
}

.message-username {
    font-size: 11px;
    color: var(--main-text-color);
    opacity: 0.9;
    margin-bottom: 6px;
}

.myMessage-username {
    display: none;
}

.message-text {
    box-decoration-break: clone;
    padding: 2px 4px;
    border-radius: 8px;
    background: var(--main-color);
    color: var(--secondary-color);
    display: inline;
}

.timestamp {
  font-size: 12px;
}

.myMessage-text {
    box-decoration-break: clone;
    padding: 1px 4px;
    border-radius: 8px;
    background: var(--my-message);
    color: var(--secondary-text-color);
    display: inline;
}

.Room-Form {
  grid-area: n;
  padding: 0 5px;
  background: var(--room-form);
  color: var(--main-text-color);
}

.Room-Form form {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.Room-Form input {
    width: 135px;
    background: var(--room-form);
    border: 0;
}

.Room-Form button {
    background: var(--room-form);
    color: var(--main-text-color);
    border: 0;
} 

.Room-Form input::placeholder {
    color: var(--main-text-color);
    font-weight: 200;
}

.Room-Form input:focus {
    outline-width: 0;
}

.Message-Form {
  grid-area: f;
  background: var(--send-message-form);
  display: flex;
}

.Message-Form input {
    width: 100%;
    padding: 15px 10px;
    margin: 0;
    border-style: none;
    background: var(--send-message-form);
    font-weight: 200;
}

.Message-Form input:focus {
    outline-width: 0;
}

.Message-Form input::placeholder {
    color: var(--main-text-color);
}

.search {
  display: block;
  position: relative;
  top: 180px;
  width: 500px;
  height: 40px;
  margin-left: auto;
  margin-right: auto;
  background: var(--main-color);
  border-radius: 3px;
  border: 1px solid #fff;}

.search input {
  width: 370px;
  padding: 10px 5px;
  float: left;
  color: var(--secondary-color);
  border: 0;
  background: transparent;
  border-radius: 3px 0 0 3px;
  font-size: 15px;}

.search input:focus {
  outline: 0;
  background:transparent;}

.search button {
  position: relative;
  float: right;
  border: 0;
  padding: 0;
  cursor: pointer;
  height: 40px;
  width: 120px;
  color: var(--secondary-color);
  background: transparent;
  border-left: 1px solid #fff;
  border-radius: 0 3px 3px 0;}   

.search button:hover {
  background: #fff;
  color:#444;}

.search button:active {
  box-shadow: 0px 0px 12px 0px rgba(225, 225, 225, 1);}

.search button:focus {outline: 0;}

.SearchResults {
  position: relative;
  padding: 5px 16px;
  width: 470px;
  background: whitesmoke;
  top: 180px;
  margin-left: auto;
  margin-right: auto;
}

.SearchResults ul {
  list-style-type: none;
  font-size: 12px;
}

.SearchResults li:hover {
  color: var(--secondary-color);
}

.home {
  width: auto;
  height: 80%;
  display: block;
  position: relative;
}

.home-img {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1; 
  opacity: 80%;
}

.ResultCard {
  position: relative;
  max-width: 500px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 15px;
  top: 480px;
}

.RestaurantPage {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas: 'l r';
} 

.RestaurantDetails {
  grid-area: l;
  position: relative;
  padding: 5px 16px;
  width: 90%;
  background: whitesmoke;
  top: 10px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.Carousel {
  grid-area: r;
}

.CarImg {
  height: 580px; 
  max-width: 100%;
  display: block;
  position: relative;
  top: 10px;
  margin-left: auto;
  margin-right: auto;
}

.Carousel-Dots {
  text-align: center; 
  width: 100%;
}

/* Slideshow container */
.slideshow-container {
  width: 100%;
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  background-color: transparent;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 10px;
  width: 10px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

